first pass at it

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -1,9 +1,17 @@
 <video class="video" muted loop autoplay playsinline>
-    <source src="@@assetPath@@/assets/main.mp4" type="video/mp4" />
+    <source src="@@assetPath@@/assets/loop.mp4" type="video/mp4" />
 </video>
 
-<html>
-<head>
-    <title>
-    </title>
-</head>
+<div class='video__headline'>
+    <div class='gs-container'>
+        <div class='video__content'>
+            <h1>Fighting addiction on Pine Ridge reservation</h1>
+            <p>Whiteclay, Nebraska is a tiny, unincorporated town that sits on the border with South Dakota. Until its closure by state officials, its four liquor stores sold over four million cans of beer a year, almost entirely to members of Lakota Sioux tribe on the Pine Ridge Indian reservation, where the sale of alcohol is banned.</p>
+        </div>
+    </div>
+</div>
+
+<div class="video__cta"><div class="gs-container"><div class="video__button"><svg class="video__svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 231 193.4"><path id="Combined-Shape" fill="#005689" d="M8.2 0L231 92.1v10L8.2 193.4 0 187.7V6.4L8.2 0z"></path></svg></div> <div class="video__label">Watch the full video<span>11 minutes</span></div></div></div>
+    </div>
+
+<iframe class='video__embed' width="560" height="315" src="https://www.youtube.com/embed/FoKF8H1l7NU" frameborder="0" allowfullscreen></iframe>
