--- a/src/sass/partials/_base.scss
+++ b/src/sass/partials/_base.scss
@@ -2,10 +2,45 @@ body, html {
     margin: 0;
     width: 100%;
     height: 100%;
+    overflow: hidden;
     background-color: #222;
 //    height: 100%;
 //     overflow: hidden;
 //     background-color: $c-yellow;
 }
 
+.gs-container {
+    position: relative;
+    margin: 0 auto;
+    z-index: 5000;
+    padding: 0 10px;
+}
+
+@include mq(mobileLandscape) {
+    padding: 0 20px;
+}
+
+@include mq(tablet) {
+    .gs-container {
+        max-width: 740px;
+    }
+}
+
+@include mq(desktop) {
+    .gs-container {
+        max-width: 980px;
+    }
+}
+
+@include mq(leftCol) {
+    .gs-container {
+        max-width: 1140px;
+    }
+}
+
+@include mq(wide) {
+    .gs-container {
+        max-width: 1300px;
+    }
+}
 
