--- a/src/sass/partials/_fonts.scss
+++ b/src/sass/partials/_fonts.scss
@@ -1,11 +1,11 @@
 @font-face {
     font-family: 'Guardian Egyptian Web';
-    src: url('https://interactive.guim.co.uk/fonts/latin1/Guardian Egyp Web-Bold.eot');
-    src: url('https://interactive.guim.co.uk/fonts/latin1/Guardian Egyp Web-Bold.eot?#iefix') format('embedded-opentype'),
-         url('https://interactive.guim.co.uk/fonts/latin1/Guardian Egyp Web-Bold.woff') format('woff'),
-         url('https://interactive.guim.co.uk/fonts/latin1/Guardian Egyp Web-Bold.ttf') format('truetype'),
-         url('https://interactive.guim.co.uk/fonts/latin1/Guardian Egyp Web-Bold.svg#Guardian Egyp Web-Bold') format('svg');
-    font-weight: 900;
+    src: url('https://interactive.guim.co.uk/fonts/latin1/Guardian Egyp Web-Light.eot');
+    src: url('https://interactive.guim.co.uk/fonts/latin1/Guardian Egyp Web-Light.eot?#iefix') format('embedded-opentype'),
+         url('https://interactive.guim.co.uk/fonts/latin1/Guardian Egyp Web-Light.woff') format('woff'),
+         url('https://interactive.guim.co.uk/fonts/latin1/Guardian Egyp Web-Light.ttf') format('truetype'),
+         url('https://interactive.guim.co.uk/fonts/latin1/Guardian Egyp Web-Light.svg#Guardian Egyp Web-Ligjt') format('svg');
+    font-weight: normal;
     font-style: normal;
     font-stretch: normal;
 }
