--- a/src/sass/partials/_image.scss
+++ b/src/sass/partials/_image.scss
@@ -2,7 +2,7 @@
     position: fixed;
     top: 50%;
     left: 50%;
-    z-index: 1;
+    z-index: 3000;
     transform: translate(-50%, -50%);
     min-width: 100%;
     min-height: 100%;
@@ -12,4 +12,116 @@
     @media screen and (orientation: portrait) {
         max-height: 100%;
     }
+}
+
+h1 {
+    -webkit-font-smoothing: antialiased;
+    font-family: 'Guardian Egyptian Web';
+    color: #fff;
+    margin: 0;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    font-size: 64px;
+    line-height: 1;
+    font-weight: normal;
+}
+
+p {
+    font-family: 'Guardian Egyptian Web';
+    font-size: 18px;
+    line-height: 1.4;
+    font-weight: normal;
+    color: #fff;
+    margin: 0;
+    margin-top: 24px;
+    position: relative;
+
+    &:before {
+        content: '';
+        height: 2px;
+        width: 140px;
+        background-color: #fb0;
+        position: absolute;
+        top: -8px;
+        left: 0;
+    }
+}
+
+.video__cta {
+    position: absolute;
+    bottom: 22px;
+    left: 10px;
+    width: 100%;
+    z-index: 7000;
+
+    @include mq(mobileLandscape) {
+        left: 20px;
+    }
+}
+
+.video__headline {
+    position: relative;
+    z-index: 7000;
+    background-color: rgba(0, 0, 0, .5);
+    padding: 6px 0 24px 0;
+}
+
+.video__content {
+    max-width: 620px;
+}
+
+.video__button {
+    background-color: #fb0;
+    border-radius: 50%;
+    width: 78px;
+    height: 78px;
+    position: relative;
+    margin-right: 8px;
+    float: left;
+}
+
+.video__svg {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    padding: 12px;
+    width: 40%;
+    height: auto;
+    margin-left: 1px;
+
+    path {
+        fill: #333;
+    }
+}
+
+.video__label {
+    color: #fb0;
+    font-family: "Guardian Egyptian Web";
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 1.1;
+    padding-top: 17px;
+
+    span {
+        color: #fff;
+        display: block;
+    }
+}
+
+.video__embed {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    z-index: 8000;
+    pointer-events: none;
+    transition: opacity .3s ease-out;
+}
+
+.has-clicked .video__embed {
+    pointer-events: auto;
+    opacity: 1;
 }
