--- a/src/sass/partials/_base.scss
+++ b/src/sass/partials/_base.scss
@@ -17,7 +17,9 @@ body, html {
 }
 
 @include mq(mobileLandscape) {
-    padding: 0 20px;
+    .gs-container {
+        padding: 0 20px;
+    }
 }
 
 @include mq(tablet) {
