--- a/src/sass/partials/_fonts.scss
+++ b/src/sass/partials/_fonts.scss
@@ -5,6 +5,18 @@
          url('https://interactive.guim.co.uk/fonts/latin1/Guardian Egyp Web-Light.woff') format('woff'),
          url('https://interactive.guim.co.uk/fonts/latin1/Guardian Egyp Web-Light.ttf') format('truetype'),
          url('https://interactive.guim.co.uk/fonts/latin1/Guardian Egyp Web-Light.svg#Guardian Egyp Web-Ligjt') format('svg');
+    font-weight: 200;
+    font-style: normal;
+    font-stretch: normal;
+}
+
+@font-face {
+    font-family: 'Guardian Egyptian Web';
+    src: url('https://interactive.guim.co.uk/fonts/latin1/Guardian Egyp Web-Regular.eot');
+    src: url('https://interactive.guim.co.uk/fonts/latin1/Guardian Egyp Web-Regular.eot?#iefix') format('embedded-opentype'),
+         url('https://interactive.guim.co.uk/fonts/latin1/Guardian Egyp Web-Regular.woff') format('woff'),
+         url('https://interactive.guim.co.uk/fonts/latin1/Guardian Egyp Web-Regular.ttf') format('truetype'),
+         url('https://interactive.guim.co.uk/fonts/latin1/Guardian Egyp Web-Regular.svg#Guardian Egyp Web-Regular') format('svg');
     font-weight: normal;
     font-style: normal;
     font-stretch: normal;
