--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -1,4 +1,6 @@
 <div class='video'>
+    <div class='video__logo-spacing'>
+    </div>
     <div class='video__content'>
         <div class='gs-container'>
             <div class='video__content-inner'>
