--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -4,8 +4,8 @@
     <div class='video__content'>
         <div class='gs-container'>
             <div class='video__content-inner'>
-                <h1 class='video__headline'>Fighting addiction on Pine Ridge reservation</h1>
-                <p class='video__standfirst'>Whiteclay, Nebraska is a tiny, unincorporated town that sits on the border with South Dakota. Until its closure by state officials, its four liquor stores sold over four million cans of beer a year, almost entirely to members of Lakota Sioux tribe on the Pine Ridge Indian reservation, where the sale of alcohol is banned.</p>
+                <h1 class='video__headline'>Liquid genocide: alcohol destroyed Pine Ridge reservation - then they fought back</h1>
+                <p class='video__standfirst'>For years, 11,000 cans of beer a day were poured into the Pine Ridge Indian reservation, causing untold damages. This summer, it stopped</p>
             </div>
         </div>
     </div>
